# py-horned-owl

./: .gitignore  Cargo.toml  README.md  gen_pyi.py  pyproject.toml
.github/workflows/: CI.yaml
pyhornedowl/: __init__.pyi
pyhornedowl/model/: __init__.py  __init__.pyi
src/: lib.rs  model.rs
