[package]
authors = ["Certus Group <engineering@certusgroup.com>"]
edition = "2018"
name = "py-horned-owl-certus"
version = "0.5.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
name = "pyhornedowl"

[dependencies.pyo3]
features = [
    "abi3-py37",
    "experimental-inspect",
    "extension-module",
    "multiple-pymethods",
]
version = "0.21"

[dependencies]
curie = "0.1.2"
failure = "0.1.8"
horned-owl = "1.0"
paste = "1.0"
quote = "1.0"
regex = "1.10"

[profile.dev]
opt-level = 3
